--- a/css/index.css
+++ b/css/index.css
@@ -134,3 +134,59 @@ button:hover{
 .artist img{
     width:100%;
 }
+@media(max-width: 500px) {
+    h1{
+        font-size:3rem;
+        margin:0;
+    }
+    a {	
+        text-decoration: none;	
+        color: black;
+        font-size:1.2rem;	
+    }	
+    nav span{
+        border-left:1px solid #626262;
+    
+    }
+    button{
+        padding:1% 3%;
+        font-size: 1.0rem;
+        border-radius:6px;
+        border:2px solid #626262;
+        box-shadow: 2px 2px 1px #626262;
+        transition: 2s;
+    }
+    .title-container div {	
+        background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/John_Martin_-_The_Plains_of_Heaven_-_Google_Art_Project.jpg/1920px-John_Martin_-_The_Plains_of_Heaven_-_Google_Art_Project.jpg');		
+        background-position: center;	
+        color: white;	
+        width:100%;
+        display:flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height:60vh;
+        margin:5% 0;
+    }	
+    .title-container hr{
+        width:100%;
+    }
+    .artists-container{
+        display:flex;
+        justify-content: space-around;
+        flex-flow: wrap;
+        width:80%;
+        margin:0 auto;
+    }
+    .artist{
+        width:80%;
+        text-align:center;
+    }
+    .artist img{
+        width:100%;
+        height:40vh;
+    }
+    .bio {
+        font-size: 20%;
+    }
+}
